web-infras/parser/tests/fixtures/babel/es2017/async-call/parenthesized-argument-object-with-assignment/output.txt
[SyntaxError]: Invalid shorthand property initializer (1,9)
1|async({ foo33 = 1 });
 |       ^
